cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template/trinity-large-preview:free-scot/row_150_update_5_template_20260315_023839.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Redis caching solution with SSM-enabled EC2 instance

Parameters:
  KeyName:
    Type: String
    Default: default-key
    Description: Name of an existing EC2 KeyPair to enable SSH access
  InstanceType:
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t3.small
      - t3.medium
    Description: EC2 instance type
  RedisNodeCount:
    Type: Number
    Default: 2
    MinValue: 1
    MaxValue: 6
    Description: Number of Redis nodes in the cluster
  RedisNodeType:
    Type: String
    Default: cache.t3.micro
    AllowedValues:
      - cache.t3.micro
      - cache.t3.small
      - cache.t3.medium
    Description: Redis node type

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  InternetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteTable

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref RouteTable

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Redis access from EC2 instances
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref EC2SecurityGroup

  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole

  SSMEnabledInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', AMI]
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref EC2InstanceProfile
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
            - !Ref EC2SecurityGroup
          SubnetId: !Ref Subnet1
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum update -y
            yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
            /opt/aws/bin/cfn-signal -e 0 --stack ${AWS::StackName} --resource SSMEnabledInstance

  RedisSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      Description: Subnet group for Redis cluster
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2

  RedisCluster:
    Type: AWS::ElastiCache::ReplicationGroup
    Properties:
      ReplicationGroupDescription: Redis cluster for caching
      CacheNodeType: !Ref RedisNodeType
      NumCacheClusters: !Ref RedisNodeCount
      Engine: redis
      EngineVersion: 6.x
      CacheSubnetGroupName: !Ref RedisSubnetGroup
      SecurityGroupIds:
        - !Ref RDSSecurityGroup
      AutomaticFailoverEnabled: true
      AtRestEncryptionEnabled: true
      TransitEncryptionEnabled: true

  RedisConnectionString:
    Type: AWS::SSM::Parameter
    Properties:
      Name: /Redis/ConnectionString
      Type: String
      Value: !Join
        - ''
        - - 'redis://'
          - !GetAtt RedisCluster.PrimaryEndPoint.Address
          - ':'
          - !GetAtt RedisCluster.PrimaryEndPoint.Port

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-0c55b159cbfafe1f0
    us-east-2:
      AMI: ami-0c55b159cbfafe1f0
    us-west-1:
      AMI: ami-0c55b159cbfafe1f0
    us-west-2:
      AMI: ami-0c55b159cbfafe1f0
    eu-west-1:
      AMI: ami-0c55b159cbfafe1f0
    eu-west-2:
      AMI: ami-0c55b159cbfafe1f0
    eu-west-3:
      AMI: ami-0c55b159cbfafe1f0
    eu-central-1:
      AMI: ami-0c55b159cbfafe1f0
    ap-southeast-1:
      AMI: ami-0c55b159cbfafe1f0
    ap-southeast-2:
      AMI: ami-0c55b159cbfafe1f0
    ap-northeast-1:
      AMI: ami-0c55b159cbfafe1f0
    ap-northeast-2:
      AMI: ami-0c55b159cbfafe1f0
    sa-east-1:
      AMI: ami-0c55b159cbfafe1f0
    ca-central-1:
      AMI: ami-0c55b159cbfafe1f0

Outputs:
  RedisEndpoint:
    Description: Redis cluster endpoint
    Value: !GetAtt RedisCluster.PrimaryEndPoint.Address
  RedisPort:
    Description: Redis cluster port
    Value: !GetAtt RedisCluster.PrimaryEndPoint.Port
  EC2InstanceId:
    Description: SSM-enabled EC2 instance ID
    Value: !Ref SSMEnabledInstance
